ADD:添加流光字体demo

--- a/app/src/main/res/layout/activity_router.xml
+++ b/app/src/main/res/layout/activity_router.xml
@@ -34,4 +34,11 @@
         android:onClick="slide"
         android:text="可展示当前选中颜色自定义view"
         tools:ignore="HardcodedText" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:onClick="shine"
+        android:text="流光动画-流光字体"
+        tools:ignore="HardcodedText" />
 </LinearLayout>
