ADD:自定义拖拽吸变的view

--- a/app/src/main/res/layout/activity_router.xml
+++ b/app/src/main/res/layout/activity_router.xml
@@ -47,4 +47,11 @@
         android:layout_height="60dp"
         android:onClick="noise"
         android:text="噪音检测进度条"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:onClick="draft"
+        android:text="自定义一个随意拖拽的悬浮View"/>
+
 </LinearLayout>
