ADD:倒计时组件widget

--- a/app/src/main/res/layout/activity_router.xml
+++ b/app/src/main/res/layout/activity_router.xml
@@ -46,12 +46,18 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:onClick="noise"
-        android:text="噪音检测进度条"/>
+        android:text="噪音检测进度条" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:onClick="draft"
-        android:text="自定义一个随意拖拽的悬浮View"/>
+        android:text="自定义一个随意拖拽的悬浮View" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:onClick="countdown"
+        android:text="倒计时组件widget" />
 
 </LinearLayout>
