ADD:HenCoder-绘制基础

--- a/app/src/main/res/layout/activity_router.xml
+++ b/app/src/main/res/layout/activity_router.xml
@@ -60,4 +60,9 @@
         android:onClick="countdown"
         android:text="倒计时组件widget" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:onClick="learnView"
+        android:text="自定义view学习" />
 </LinearLayout>
