--- a/app/src/main/res/layout/frame_anim_test.xml
+++ b/app/src/main/res/layout/frame_anim_test.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/widget_device_fan_ani" />
+<!--    <ImageView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:src="@drawable/widget_device_fan_ani" />-->
 </FrameLayout>
