--- a/app/src/main/res/layout/activity_router.xml
+++ b/app/src/main/res/layout/activity_router.xml
@@ -65,4 +65,10 @@
         android:layout_height="60dp"
         android:onClick="learnView"
         android:text="自定义view学习" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:onClick="shimmerView"
+        android:text="微光效果"/>
 </LinearLayout>
