--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="face_background">#FF151515</color>
+    <color name="face_item_background">#FF333333</color>
+    <color name="shimmer_color">#00FFFFFF</color>
 </resources>
