--- a/app/src/main/res/layout/activity_shimmer.xml
+++ b/app/src/main/res/layout/activity_shimmer.xml
@@ -5,13 +5,21 @@
     android:layout_height="match_parent">
 
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/shapeImage"
-        android:layout_width="198dp"
-        android:layout_height="160dp"
-        android:background="@color/face_item_background"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <com.cooltechworks.views.shimmer.ShimmerRecyclerView
+        android:id="@+id/rv_shimmer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
+        android:clipToPadding="false"
+        android:overScrollMode="never"
+        android:scrollbars="none"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:shimmer_demo_angle="30"
+        app:shimmer_demo_child_count="8"
+        app:shimmer_demo_grid_child_count="2"
+        app:shimmer_demo_layout="@layout/item_face_video_preview"
+        app:shimmer_demo_layout_manager_type="grid"
+        app:shimmer_demo_shimmer_color="#33ffffff" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
