--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="face_background">#FF151515</color>
     <color name="face_item_background">#FF333333</color>
     <color name="shimmer_color">#00FFFFFF</color>
+
+    <color name="demo_dark_transparent">#24000000</color>
 </resources>
