--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -56,4 +56,17 @@
         <attr name="spv_min_scale" format="float" />
         <attr name="spv_max_scale" format="float" />
     </declare-styleable>
+
+
+    <declare-styleable name="HanYiYaKuTextView">
+        <attr name="tv_orientation" format="enum">
+            <enum name="vertical" value="1" />
+            <enum name="horizontal" value="2" />
+        </attr>
+        <attr name="start_color" format="color|reference" />
+        <attr name="center_color" format="color|reference" />
+        <attr name="end_color" format="color|reference" />
+        <attr name="stroke_color" format="color|reference" />
+        <attr name="stroke_width" format="dimension" />
+    </declare-styleable>
 </resources>
