--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -21,7 +21,6 @@
     </declare-styleable>
 
 
-
     <!--滚动slotview通用属性-->
     <declare-styleable name="ScrollSlotView">
         <!-- 中间item的背景-->
@@ -68,5 +67,7 @@
         <attr name="end_color" format="color|reference" />
         <attr name="stroke_color" format="color|reference" />
         <attr name="stroke_width" format="dimension" />
+        <attr name="stroke_start_color" format="color|reference" />
+        <attr name="stroke_end_color" format="color|reference" />
     </declare-styleable>
 </resources>
