--- a/app/src/main/res/layout/activity_router.xml
+++ b/app/src/main/res/layout/activity_router.xml
@@ -93,6 +93,12 @@
             android:layout_height="60dp"
             android:onClick="notification2"
             android:text="通知栏2" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:onClick="randomText"
+            android:text="自定义view1" />
     </LinearLayout>
 
 </ScrollView>
