--- a/app/src/main/res/layout/activity_router.xml
+++ b/app/src/main/res/layout/activity_router.xml
@@ -99,6 +99,12 @@
             android:layout_height="60dp"
             android:onClick="randomText"
             android:text="自定义view1" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:onClick="httpText"
+            android:text="自定义OKHTTP" />
     </LinearLayout>
 
 </ScrollView>
